--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="card-body">
               <h5 class="card-title">Ewanjolly Engineering Ltd </h5>
               <p class="card text">A modern responsive and professional website for Ewanjolly Engineering Ltd.</p>
-              <a href="www.ewanjollyengineering.com" class="btn btn-success btn-sm">View project</a>
+              <a href="https://www.ewanjollyengineering.com" class="btn btn-success btn-sm">View project</a>
             </div>
           </div>
         </div>
